Resource: fontawesome kit 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
     <title>우도독</title>
     <style>
       html,
@@ -13,6 +15,7 @@
         margin: 0;
         padding: 0;
         overflow: initial !important;
+        font-family: 'Noto Sans', sans-serif;
       }
       body {
         font-size: 15px;
@@ -30,5 +33,6 @@
   <body>
     <div id="app"></div>
     <script src="/dist/app.js"></script>
+    <script src="https://kit.fontawesome.com/d74f783cd3.js" crossorigin="anonymous"></script>
   </body>
 </html>
